--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "db:init": "tsx src/lib/db/init-db.ts",
     "db:reset": "tsx src/lib/db/init-db.ts --reset",
-    "db:test": "tsx src/lib/db/schema.test.ts"
+    "db:test": "tsx src/lib/db/schema.test.ts",
+    "db:utils:test": "tsx src/lib/db/test.ts"
   },
   "dependencies": {
     "better-sqlite3": "^12.2.0",
