--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "db:init": "tsx src/lib/db/init-db.ts",
     "db:reset": "tsx src/lib/db/init-db.ts --reset",
     "db:test": "tsx src/lib/db/schema.test.ts",
-    "db:utils:test": "tsx src/lib/db/test.ts"
+    "db:utils:test": "tsx src/lib/db/test.ts",
+    "db:view": "tsx src/lib/db/view-db.ts",
+    "db:seed": "tsx src/lib/db/seed-db.ts"
   },
   "dependencies": {
     "better-sqlite3": "^12.2.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -22,6 +25,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
