--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-config-next": "15.4.1",
     "tailwindcss": "^4",
     "tsx": "^4.20.3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.2.4"
   }
 }
